--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
   <!-- Jungle ambience and SFX -->
-  <audio id="jungleMusic" src="jungle.mp3" loop
+  <audio id="jungleMusic" src="sfx/jungle.mp3" loop
     preload="auto"></audio>
   <audio id="doorSfx" src="https://cdn.pixabay.com/audio/2022/10/16/audio_12c6c6f6e2.mp3" preload="auto"></audio>
-  <audio id="powerupSfx" src="powerup.mp3" preload="auto"></audio>
-  <audio id="speedSfx" src="powerup.mp3" preload="auto"></audio>
-  <audio id="ghostSfx" src="powerup.mp3" preload="auto"></audio>
+  <audio id="powerupSfx" src="sfx/powerup.mp3" preload="auto"></audio>
+  <audio id="speedSfx" src="sfx/powerup.mp3" preload="auto"></audio>
+  <audio id="ghostSfx" src="sfx/powerup.mp3" preload="auto"></audio>
   <canvas id="threejs-canvas"></canvas>
   <canvas id="minimapCanvas" width="340" height="340"></canvas>
   <div id="gameTimer">Timer: 130</div>
