fixed some bugs

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <h2 id="question">Question goes here</h2>
     <div class="quiz-options" id="answers"></div>
     <div class="quiz-feedback" id="quizFeedback"></div>
-    <button class="quiz-next-btn" id="nextBtn" style="display:none;">Next</button>
+    <button class="quiz-next-btn" id="nextBtn">Next</button>
   </div>
   <div id="comboFloat" class="combo-float"></div>
   <div id="doorMsg">The Ancient Door Opens!</div>
