--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Set Safari Maze 3D - Math Fest Edition</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 
 
